--- a/src/Pfd.css
+++ b/src/Pfd.css
@@ -65,11 +65,27 @@
   font-size: 10px;
   position: absolute;
   top: 152.4px;
-  left: 25.5px;
   height: 319.8px;
-  width: 65.5px;
-  overflow: hidden;
+  width: 85px;
+  left: 25.5px;
+  
 }
+.AirspeedIndicator .SpeedContainer {
+  position: relative;
+  height: 100%;
+  width: 68px;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.AirspeedIndicator .RightMarks {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  width: 17px;
+  display: inline-block;
+}
+
 .AirspeedIndicator .SpeedLabel {
   position: absolute;
   /* float: right; */
@@ -80,7 +96,7 @@
 
 .AirspeedIndicator .SpeedLabel .SpeedNumber {
   position: relative;
-  right: 10px;
+  right: 12px;
   top: 12px;
 
 }
@@ -92,10 +108,31 @@
   z-index: 0;
 }
 
+svg.VerticalLine {
+  position: absolute;
+  right: 0px;
+  height:3000px;
+  bottom: 113px;
+}
+svg.VerticalLine line {
+  stroke: rgb(255, 255, 255);
+  stroke-width: 1;
+}
+
+svg.Overspeed {
+  position: absolute;
+  height:1000px;
+  bottom: 113px;
+  width: 10px;
+}
+svg.Overspeed line {
+  stroke: rgb(255, 0, 0);
+  stroke-width: 1;
+}
 
 svg.baseline {
   position: absolute;
-  bottom: -1.5px;
+  bottom: -1.2px;
   right: 0px;
 }
 svg.baseline line {
@@ -103,6 +140,18 @@ svg.baseline line {
   stroke-width: 1;
 }
 
+svg.SpeedBottomLine {
+  position: absolute;
+  bottom: -1px;
+  /* right: -19px; */
+  left: -2px;
+  width: 87px;
+}
+svg.SpeedBottomLine line {
+  z-index: 200;
+  stroke: rgb(255, 255, 255);
+  stroke-width: 1;
+}
 
 .AirspeedIndicator .SpeedNumber {
   position: relative;
@@ -127,7 +176,7 @@ svg.baseline line {
   left: 465px;
   height: 325px;
   width: 85px;
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box; 
   border: dotted;
 }
@@ -139,7 +188,7 @@ svg.baseline line {
   /* left: 465px; */
   /* height: 325px; */
   /* width: 85px; */
-  /* overflow: hidden; */
+  overflow: hidden;
   /* box-sizing: border-box;  */
   /* border: dotted; */
 }
